skims\feat(back): #7020 add test files
- adjust f001 cs method enum to avoid confusion
- add missing libroot test files for f001 and f004
- adjust csv lib_root results
- no-deltas-test